<resources>
    <string name="app_name">PokeFight</string>

    <string name="toText">To</string>
    <string name="fromText">From</string>
    <string name="doubleEffectText">x2</string>
    <string name="halfEffectText">x0.5</string>
    <string name="noEffectText">x0</string>
    <string name="typeImageDescription">Type illustration</string>

    <string name="typeEntryImageDescription">Type Illustration</string>
    <string name="pokemonSlotImage">Pokemon Slot Image</string>
    <string name="typeImage">Type Image</string>
    <string name="battleLobbyText">Your first opponent will be…</string>
    <string name="battleLobbyList">Please select your Pokemons for the battle to come.</string>
    <string name="fightButton">Fight !</string>
    <string name="appDescription">Welcome Trainer! You have a team of three pokemons and you will fight 3 wild pokemons in a row. But before the battle starts, you only know your first opponent. And remember, most Pokemons have strengths and weaknesses. Good luck!</string>
    <string name="madeBy">An application made by:</string>
    <string name="james">James RICHET</string>
    <string name="ingo">Ingo BRAEKMAN</string>
    <string name="allan">Bastien SEIRA</string>
    <string name="bastien">Allan CANTIN</string>
    <string name="battleButton">Battle</string>
    <string name="pokedex">PokeDex</string>
    <string name="madeAt">Made at</string>
    <string name="epita">EPITA</string>
    <string name="height">Height:</string>
    <string name="speed">Speed:</string>
    <string name="attack">Attack:</string>
    <string name="specialAttack">Special Attack:</string>
    <string name="weight">Weight:</string>
    <string name="hp">HP:</string>
    <string name="defense">Defense:</string>
    <string name="specialDefense">Special Defense:</string>
    <string name="types">Types:</string>
    <string name="appTitle">PokeBattle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
