<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/appTitle"
        android:textColor="#DC5B17"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/appDescription"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <TextView
        android:id="@+id/SignatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/madeBy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTextView" />

    <TextView
        android:id="@+id/Dev1NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/james"
        app:layout_constraintStart_toEndOf="@+id/SignatureTextView"
        app:layout_constraintTop_toTopOf="@+id/SignatureTextView" />

    <TextView
        android:id="@+id/Dev2NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingo"
        app:layout_constraintStart_toStartOf="@+id/Dev1NameTextView"
        app:layout_constraintTop_toBottomOf="@+id/Dev1NameTextView" />

    <TextView
        android:id="@+id/Dev3NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bastien"
        app:layout_constraintStart_toStartOf="@+id/Dev2NameTextView"
        app:layout_constraintTop_toBottomOf="@+id/Dev2NameTextView" />

    <TextView
        android:id="@+id/Dev4NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allan"
        app:layout_constraintStart_toStartOf="@+id/Dev3NameTextView"
        app:layout_constraintTop_toBottomOf="@+id/Dev3NameTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/BattleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battleButton"
        app:layout_constraintBottom_toTopOf="@+id/EpitaImageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dev4NameTextView" />

    <Button
        android:id="@+id/PokedexButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokedex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/BattleButton" />

    <TextView
        android:id="@+id/LocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/madeAt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <ImageView
        android:id="@+id/EpitaImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/epita"
        app:layout_constraintBottom_toBottomOf="@+id/LocationTextView"
        app:layout_constraintStart_toEndOf="@+id/LocationTextView"
        app:layout_constraintTop_toTopOf="@+id/LocationTextView"
        app:srcCompat="@drawable/epita" />
</androidx.constraintlayout.widget.ConstraintLayout>