<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TypeHelpFragment" >

    <ImageView
        android:id="@+id/TypeImageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/typeImage"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="@+id/guideline_v50"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/screen_background_light_transparent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/damageTextEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <View
        android:id="@+id/verticalDivider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintTop_toBottomOf="@+id/TypeImageView"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/verticalDivider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/damageTextEndGuideline"
        app:layout_constraintTop_toBottomOf="@+id/TypeImageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromText"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verticalDivider" />

    <TextView
        android:id="@+id/textView_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v50"
        app:layout_constraintTop_toTopOf="@+id/textView_from" />

    <View
        android:id="@+id/horizontalDivider_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_from" />

    <TextView
        android:id="@+id/doubleEffectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/doubleEffectText"
        app:layout_constraintBottom_toTopOf="@+id/horizontalDivider_2"
        app:layout_constraintEnd_toStartOf="@+id/damageTextEndGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_1" />

    <GridView
        android:id="@+id/DoubleDamageFromGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/horizontalDivider_2"
        app:layout_constraintEnd_toStartOf="@id/verticalDivider"
        app:layout_constraintStart_toStartOf="@+id/damageTextEndGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider_1"
        android:numColumns="3"/>

    <GridView
        android:id="@+id/DoubleDamageToGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalDivider_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v50"
        app:layout_constraintTop_toTopOf="@+id/horizontalDivider_1"
        android:numColumns="3"/>

    <View
        android:id="@+id/horizontalDivider_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/horizontalDivider_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/halfEffectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/halfEffectText"
        app:layout_constraintBottom_toTopOf="@+id/horizontalDivider_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_2" />

    <GridView
        android:id="@+id/HalfDamageFromGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalDivider_3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="@+id/damageTextEndGuideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_2"
        android:numColumns="3"/>

    <GridView
        android:id="@+id/HalfDamageToGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalDivider_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v50"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_2"
        android:numColumns="3"/>

    <View
        android:id="@+id/horizontalDivider_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_2" />

    <TextView
        android:id="@+id/NoEffectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/noEffectText"
        app:layout_constraintBottom_toBottomOf="@+id/verticalDivider"
        app:layout_constraintEnd_toStartOf="@+id/damageTextEndGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_3" />

    <GridView
        android:id="@+id/NoDamageFromGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v50"
        app:layout_constraintStart_toStartOf="@+id/damageTextEndGuideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_3"
        android:numColumns="3"/>

    <GridView
        android:id="@+id/NoDamageToGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v50"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider_3"
        android:numColumns="3"/>

</androidx.constraintlayout.widget.ConstraintLayout>